# AI-Race-3D

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_auto_final_after_public_hq.sh  run_hq_background.sh  run_private_mip_30k_r2_k01_target349.sh  run_private_mip_submit.sh  run_queue_hq.sh  run_resume_2dgs_public_hq.sh  run_resume_private_2dgs.sh
configs/: best_single_method_plan.json  defaults.json  gs_runs.json  third_party_repos.json
docs/: third_party.md
eval/: evaluate_public.py
reports/: inspect.json  submission_results.md
reports/experiments/: 2dgs_public_hq_done.txt  final_hq_selection.json  final_hq_winner.txt  final_selection.json  log_2dgs_HCM0181_30k.txt  log_2dgs_HCM0193_30k.txt  log_2dgs_HCM0193_30k_resume.txt  log_2dgs_HCM0204_30k_resume.txt  log_2dgs_hcm0031_30k_resume.txt  log_2dgs_hcm0034_30k_resume.txt  log_HCM0181_30k.txt  log_HCM0193_30k.txt  log_HCM0204_30k.txt  log_auto_private_2dgs_30k_default_jpeg100_HCM0249.txt  log_auto_private_2dgs_30k_default_jpeg100_HCM0254.txt  log_auto_private_2dgs_30k_default_jpeg100_HCM0276.txt  log_auto_private_2dgs_30k_default_jpeg100_HCM1439.txt  log_auto_private_2dgs_30k_default_jpeg100_HNI0131.txt  log_auto_private_2dgs_30k_default_jpeg100_HNI0265.txt  log_eval_2dgs_30k_resume.txt  log_eval_30k.txt  log_eval_mip_30k.txt  log_hcm0031_30k.txt  log_hcm0034_30k.txt  log_mip_HCM0181_30k.txt  log_mip_HCM0193_30k.txt  log_mip_HCM0204_30k.txt  log_mip_hcm0031_30k.txt  log_mip_hcm0034_30k.txt  log_private_mip_HCM0249_30k.txt  log_private_mip_target349_HCM0249.txt  log_private_mip_target349_main.txt  log_q97_verify_folder.txt  log_q97_zip.txt  log_qtarget_render_HCM0249.txt  log_qtarget_render_HCM0254.txt  log_qtarget_render_HCM0276.txt  log_qtarget_render_HCM1439.txt  log_qtarget_render_HNI0131.txt  log_qtarget_render_HNI0265.txt  (+22 more)
reports/experiments/commands/: 00_preflight.sh  01_generate_masks.sh  10_quick_train.sh  (+5 more)
runs/: README.md  run_hq_combined.sh  run_private_mip_30k_r2_k01_target349.sh  run_private_mip_submit.sh
runs/commands/: 00_preflight.sh  01_generate_masks.sh  10_smoke.sh  20_public.sh  21_eval.sh  30_private.sh
scripts/: backup_all.sh  evaluate_public.py  generate_experiment_commands.py  generate_sam3_masks.py  generate_submission_nearest.py  inspect_dataset.py  recompress_submission_jpegs.py  run_2dgs_scene.py  run_mip_splatting_scene.py  scene_parsers.py  select_best_single_method.py  setup_2dgs.py  setup_mip_splatting.py  train_gs_scene.py  verify_submission.py  verify_zip.py
src/: config_defaults.py  mask_utils.py  scene_parsers.py
src/method_runners/: __init__.py  run_2dgs_scene.py  run_3dgs_scene.py  run_mip_splatting_scene.py
src/var2026_bts/: __init__.py  mask_utils.py  scene_parsers.py
utils/: generate_experiment_commands.py  generate_sam3_masks.py  generate_submission_nearest.py  inspect_dataset.py  make_submission_zip.py  recompress_submission_jpegs.py
verify/: verify_submission.py
(+10 files in other folders)
