[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "var-2026-bts"
version = "0.1.0"
description = "VAR 2026 Digital Twin for BTS — Novel View Synthesis pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Competition Team"},
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pycolmap>=0.4",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "gsplat>=1.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "transformers>=4.40",
    "accelerate>=0.27",
    "lpips>=0.1.4",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
mip-splatting = [
    "diff-gaussian-rasterization @ file:./third_party/mip-splatting/submodules/diff-gaussian-rasterization",
    "simple-knn @ file:./third_party/mip-splatting/submodules/simple-knn",
]
twodgs = [
    "diff-surfel-rasterization @ file:./third_party/2d-gaussian-splatting/submodules/diff-surfel-rasterization",
    "simple-knn @ file:./third_party/2d-gaussian-splatting/submodules/simple-knn",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["var2026_bts*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
