[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-race-3d"
version = "0.1.0"
description = "AI Race 3D novel view synthesis pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Competition Team"},
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pycolmap>=0.4",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "gsplat>=1.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "transformers>=4.40",
    "accelerate>=0.27",
    "lpips>=0.1.4",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
mip-splatting = [
    "diff-gaussian-rasterization @ file:./third_party/mip-splatting/submodules/diff-gaussian-rasterization",
    "simple-knn @ file:./third_party/mip-splatting/submodules/simple-knn",
]
twodgs = [
    "diff-surfel-rasterization @ file:./third_party/2d-gaussian-splatting/submodules/diff-surfel-rasterization",
    "simple-knn @ file:./third_party/2d-gaussian-splatting/submodules/simple-knn",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config_defaults", "mask_utils", "scene_parsers"]
packages = ["method_runners"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
